Medley layout 1- spacing fix

--- a/coding-exercises/07.18-medley-week/style/layout1.css
+++ b/coding-exercises/07.18-medley-week/style/layout1.css
@@ -1,7 +1,7 @@
 inner-column.layout1 {
 	display: flex;
 	flex-direction: column;
-	gap: 75px;
+	/*gap: 75px;*/
 
 }
 
